"5.0.0 index.html and flight html added. Görünümler ayarlandı, PageController eklendi ve ayarlandı  ApiService ile farklı bir api endpoint üzerinden uçuş verileri çekildi. Scheduled Task Service ile arkaplan görevleri ayarlandı ve uzak api üzerinden gelen veriler veritabanına eklendi."

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.password=sinan
 
 spring.security.user.name=root
 spring.security.user.password=sinan
+
+api.url=https://65b31f5a770d43aba4794ec1.mockapi.io/flight/api/Flight
