--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.security.user.name=root
 spring.security.user.password=sinan
 
 api.url=https://65b31f5a770d43aba4794ec1.mockapi.io/flight/api/Flight
+mock.api.url=http://localhost:9090/api/flights
